fix(FE): fix not wrapping text for toast notifications

--- a/Reenbit-test-task.FE/src/app/shared/components/toast/toast/toast.component.css
+++ b/Reenbit-test-task.FE/src/app/shared/components/toast/toast/toast.component.css
@@ -37,8 +37,8 @@
   position: relative;
   display: inline-flex;
   pointer-events: auto;
-  max-height: 7rem;
-  max-width: 25rem;
+  max-height: 10rem;
+  max-width: 30rem;
   min-width: 10rem;
   border-radius: 0.5rem;
   padding: 0.5rem 2rem 0.5rem 0.5rem;
@@ -85,10 +85,6 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-}
-
-.toast-message {
-  flex-shrink: 0;
 }
 
 .new-message-text .toast-message.sender {
